# clawdstrike

./: .gitignore  .rustfmt.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.hushd  GOVERNANCE.md  LICENSE  NOTICE  README.md  SECURITY.md  deny.toml  mise.toml  package.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
HomebrewFormula/: hush.rb
crates/clawdstrike/: Cargo.toml
crates/clawdstrike/benches/: engine.rs
crates/clawdstrike/src/: curator_config.rs  engine.rs  error.rs  hygiene.rs  identity.rs  instruction_hierarchy.rs  ipfs.rs  jailbreak.rs  lib.rs  marketplace_feed.rs  output_sanitizer.rs  pipeline.rs  placeholders.rs  policy.rs  policy_bundle.rs  posture.rs  spine_bridge.rs  watermarking.rs
crates/clawdstrike/src/async_guards/: cache.rs  circuit_breaker.rs  http.rs  mod.rs  rate_limit.rs  registry.rs  retry.rs  runtime.rs  types.rs
crates/clawdstrike/src/async_guards/threat_intel/: mod.rs  safe_browsing.rs  snyk.rs  virustotal.rs
crates/clawdstrike/src/guards/: custom.rs  egress_allowlist.rs  forbidden_path.rs  jailbreak.rs  mcp_tool.rs  mod.rs  patch_integrity.rs  path_allowlist.rs  path_normalization.rs  prompt_injection.rs  secret_leak.rs
crates/clawdstrike/src/irm/: exec.rs  fs.rs  mod.rs  net.rs  sandbox.rs
crates/clawdstrike/src/plugins/: loader.rs  manifest.rs  mod.rs  runtime.rs
crates/clawdstrike/tests/: async_guard_runtime.rs  compliance_templates.rs  policy_extends.rs  proptest_guards.rs  threat_intel_guards.rs
crates/eas-anchor/: Cargo.toml
crates/eas-anchor/src/: batcher.rs  config.rs  eas_client.rs  error.rs  lib.rs  main.rs  nats_sub.rs
crates/hush-certification/: Cargo.toml
crates/hush-certification/src/: error.rs  lib.rs
crates/hush-certification/src/audit/: mod.rs
crates/hush-certification/src/badge/: mod.rs
crates/hush-certification/src/certification/: mod.rs
crates/hush-certification/src/evidence/: mod.rs
crates/hush-certification/src/webhooks/: mod.rs
crates/hush-cli/: Cargo.toml
crates/hush-cli/src/: clawdstrike.rs  guard_cli.rs  hush_run.rs  main.rs  policy_bundle.rs  policy_diff.rs  policy_event.rs  policy_impact.rs  policy_lint.rs  policy_migrate.rs  policy_observe.rs  policy_pac.rs  policy_rego.rs  policy_synth.rs  policy_test.rs  policy_version.rs  remote_extends.rs  tests.rs
crates/hush-core/: Cargo.toml
crates/hush-core/benches/: crypto.rs
crates/hush-core/src/: canonical.rs  error.rs  hashing.rs  lib.rs  merkle.rs  receipt.rs  signing.rs  tpm.rs
crates/hush-core/tests/: canonical_vectors.rs  proptest_crypto.rs  proptest_merkle.rs  receipt_posture_snapshot_vectors.rs  receipt_version_vectors.rs
crates/hush-multi-agent/: Cargo.toml
crates/hush-multi-agent/src/: correlation.rs  error.rs  identity_registry.rs  lib.rs  message.rs  revocation.rs  token.rs  types.rs
crates/hushd/: Cargo.toml
crates/hushd/src/: authz.rs  certification_webhooks.rs  cli.rs  config.rs  identity_rate_limit.rs  lib.rs  main.rs  metrics.rs  policy_engine_cache.rs  policy_event.rs  rate_limit.rs  remote_extends.rs  state.rs  tls.rs  v1_rate_limit.rs
crates/hushd/src/api/: agents.rs  audit.rs  certification.rs  check.rs  eval.rs  events.rs  health.rs  me.rs  metrics.rs  mod.rs  policy.rs  policy_scoping.rs  rbac.rs  saml.rs  session.rs  shutdown.rs  siem.rs  v1.rs  webhooks.rs
crates/hushd/src/audit/: forward.rs  mod.rs  schema.rs
crates/hushd/src/auth/: middleware.rs  mod.rs  store.rs  types.rs
crates/hushd/src/control_db/: mod.rs  schema.rs
crates/hushd/src/identity/: mod.rs  oidc.rs  saml.rs
crates/hushd/src/policy_scoping/: mod.rs
crates/hushd/src/rbac/: mod.rs
crates/hushd/src/session/: mod.rs
crates/hushd/src/siem/: dlq.rs  exporter.rs  filter.rs  manager.rs  mod.rs  ratelimit.rs  types.rs
crates/hushd/src/siem/exporters/: alerting.rs  datadog.rs  elastic.rs  mod.rs  splunk.rs  sumo_logic.rs  webhooks.rs
crates/hushd/src/siem/threat_intel/: config.rs  guard.rs  mod.rs  service.rs  stix.rs  taxii.rs
crates/hushd/src/siem/transforms/: cef.rs  ecs.rs  mod.rs  ocsf.rs
crates/hushd/tests/: integration.rs  tls.rs
crates/hushd/tests/common/: mod.rs
crates/sdr-integration-tests/: Cargo.toml
crates/sdr-integration-tests/src/: lib.rs
crates/sdr-integration-tests/tests/: bridge_roundtrip_test.rs  e2e_pipeline.rs
crates/spine/: Cargo.toml
crates/spine-cli/: Cargo.toml
crates/spine-cli/src/: main.rs
crates/spine-cli/src/commands/: checkpoints.rs  envelopes.rs  mod.rs  proofs.rs  status.rs  trust.rs
crates/spine/src/: attestation.rs  checkpoint.rs  envelope.rs  error.rs  hash.rs  lib.rs  marketplace_facts.rs  marketplace_spine.rs  nats_transport.rs  spiffe.rs  trust.rs
crates/spine/tests/: attestation_test.rs  marketplace_facts_test.rs  marketplace_spine_test.rs  pipeline_test.rs
crates/tetragon-bridge/: Cargo.toml  build.rs
crates/tetragon-bridge/proto/: tetragon.proto
crates/tetragon-bridge/src/: error.rs  lib.rs  main.rs  mapper.rs  tetragon.rs
deploy/: README.md  com.hushclaw.hushd.plist  config.yaml
docker/: .dockerignore  Dockerfile.hubble-bridge  Dockerfile.spine  Dockerfile.tetragon-bridge  docker-compose.services.yaml  entrypoint-spine.sh  workspace-hubble.toml  workspace-spine.toml  workspace-tetragon.toml
docs/: HANDOFF.md  (+2 more)
examples/multi-agent-orchestration/: Cargo.toml  README.md
examples/multi-agent-orchestration/src/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: dns_parse.rs  merkle.rs  policy_parse.rs  secret_leak.rs  sha256.rs  sni_parse.rs
spine/reticulum/: README.md  pyproject.toml
spine/reticulum/pi-gateway/: Dockerfile  docker-compose.yml
spine/reticulum/pi-gateway/config/: adapter.yaml  disclosure.yaml  reticulum.conf
spine/reticulum/pi-gateway/scripts/: health-check.sh  setup-rnode.sh
spine/reticulum/src/spine_reticulum/: __init__.py  adapter.py  audit.py  cli.py  config.py  encoding.py  envelope.py  gateway.py  identity.py  priority.py  store.py
spine/reticulum/tests/: test_audit.py  test_encoding.py  test_envelope.py  test_gateway.py  test_priority.py  test_store.py
(+574 files in other folders)
