[package]
name = "hush-cli"
description = "Command-line interface for hushclaw"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["security", "cli", "verification", "hushclaw"]
categories = ["command-line-utilities", "authentication"]
readme = "../../README.md"

[[bin]]
name = "hush"
path = "src/main.rs"

[dependencies]
hush-core.workspace = true
hushclaw.workspace = true
clap.workspace = true
clap_complete = "4.4"
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
serde.workspace = true
anyhow.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
sha2.workspace = true
hex.workspace = true
rand.workspace = true
chrono.workspace = true
base64.workspace = true

[features]
default = []

[lints]
workspace = true
