[package]
name = "hush-core"
description = "Core cryptographic primitives for hushclaw"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["security", "cryptography", "verification", "hushclaw"]
categories = ["cryptography", "authentication"]
readme = "../../README.md"

[dependencies]
ed25519-dalek.workspace = true
sha2.workspace = true
sha3.workspace = true
rand.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
proptest = "1.4"

[features]
default = []
wasm = []
