[package]
name = "hush-core"
description = "Core cryptographic primitives for clawdstrike"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["security", "cryptography", "verification", "clawdstrike"]
categories = ["cryptography", "authentication"]
readme = "../../README.md"

[dependencies]
ed25519-dalek.workspace = true
sha2.workspace = true
sha3.workspace = true
rand_core.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
ryu.workspace = true
thiserror.workspace = true
chrono.workspace = true

[dev-dependencies]
proptest = "1.9"

[features]
default = []
wasm = []

[lints]
workspace = true
