[package]
name = "hush-multi-agent"
description = "Multi-agent security primitives (identity, delegation, audit correlation)"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
hush-core.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest = "1.9"

[lints]
workspace = true

