[package]
name = "hushd"
description = "Hushclaw daemon for runtime security enforcement"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["security", "daemon", "enforcement", "hushclaw"]
categories = ["command-line-utilities", "authentication"]
readme = "../../README.md"

[lib]
name = "hushd"
path = "src/lib.rs"

[[bin]]
name = "hushd"
path = "src/main.rs"

[dependencies]
hush-core.workspace = true
hush-proxy.workspace = true
hushclaw.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
sha2.workspace = true
hex.workspace = true

# HTTP server
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# Database
rusqlite.workspace = true

# Async utilities
tokio-stream.workspace = true
futures.workspace = true

# Config
toml.workspace = true
dirs.workspace = true

# HTTP client (for status command)
reqwest.workspace = true

[dev-dependencies]
reqwest = { workspace = true, features = ["blocking"] }

[features]
default = []
