[package]
name = "hushd"
description = "Clawdstrike daemon for runtime security enforcement"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["security", "daemon", "enforcement", "clawdstrike"]
categories = ["command-line-utilities", "authentication"]
readme = "../../README.md"

[lib]
name = "hushd"
path = "src/lib.rs"

[[bin]]
name = "hushd"
path = "src/main.rs"

[[bin]]
name = "clawdstriked"
path = "src/main.rs"

[dependencies]
hush-core.workspace = true
hush-proxy.workspace = true
clawdstrike.workspace = true
hush-certification.workspace = true
clap.workspace = true
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
rand.workspace = true
uuid.workspace = true
thiserror.workspace = true
sha2.workspace = true
hex.workspace = true
base64.workspace = true
ring = "0.17"

# HTTP server
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
rustls.workspace = true
rustls-pki-types.workspace = true
tokio-rustls.workspace = true

# Rate limiting
governor.workspace = true
dashmap.workspace = true
regex.workspace = true
globset.workspace = true
roxmltree.workspace = true
openssl.workspace = true
rust-xmlsec.workspace = true

# Database
rusqlite.workspace = true

# Async utilities
tokio-stream.workspace = true
futures.workspace = true

# Config
toml.workspace = true
dirs.workspace = true

# HTTP client (for status command + remote policy extends + SIEM exporters)
reqwest = { workspace = true, features = ["blocking"] }
jsonwebtoken.workspace = true
flate2.workspace = true
url.workspace = true

[dev-dependencies]
reqwest = { workspace = true, features = ["blocking"] }

[features]
default = []

[lints]
workspace = true
