[package]
name = "sdr-integration-tests"
description = "Integration tests for the full SDR pipeline: bridges, spine envelopes, checkpoints, proofs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dev-dependencies]
hush-core.workspace = true
spine.workspace = true
tetragon-bridge = { path = "../tetragon-bridge", version = "0.1.0" }
hubble-bridge = { path = "../hubble-bridge", version = "0.1.0" }
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
