[package]
name = "tetragon-bridge"
description = "Bridges Tetragon gRPC events to signed Spine envelopes on NATS"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["tetragon", "security", "grpc", "nats", "clawdstrike"]
categories = ["network-programming", "authentication"]
readme = "../../README.md"

[[bin]]
name = "tetragon-bridge"
path = "src/main.rs"

[dependencies]
spine.workspace = true
hush-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap = { workspace = true, features = ["env"] }
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-nats = "0.39"
tonic = "0.13"
prost = "0.13"
prost-types = "0.13"
tokio-stream = { workspace = true }

[build-dependencies]
tonic-build = "0.13"
prost-build = "0.13"

[lints]
workspace = true
